--- a/hello-world-chart/templates/deployment.yaml
+++ b/hello-world-chart/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: nginx
-  name: nginx
+  name: {{ .Release.Name }}-nginx
 spec:
   replicas: 2
   selector:
