--- a/hello-world-chart/templates/service.yaml
+++ b/hello-world-chart/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: nginx
-  name: nginx
+  name: {{ .Release.Name }}-nginx
 spec:
   ports:
   - port: 80
