--- a/hello-world-chart/templates/service.yaml
+++ b/hello-world-chart/templates/service.yaml
@@ -3,15 +3,15 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: nginx
-  name: {{ .Release.Name }}-nginx
+    app: {{ .Release.Name }}-nginx
+  name: {{ .Release.Name }}-svc
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
   selector:
-    app: nginx
+    app: {{ .Release.Name }}-nginx
   type: LoadBalancer
 status:
   loadBalancer: {}
