Fix liveness and readiness probes to use port 80 in hello-world Helm chart deployment

--- a/hello-world-chart/templates/deployment.yaml
+++ b/hello-world-chart/templates/deployment.yaml
@@ -23,9 +23,9 @@ spec:
         livenessProbe:
           httpGet:
             path: /
-            port: http
+            port: 80
         readinessProbe:
           httpGet:
             path: /
-            port: http
+            port: 80
 status: {}
