--- a/webapp-color/templates/configmap.yaml
+++ b/webapp-color/templates/configmap.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 metadata:
   name: {{ .Values.configMap.name }}
-  namespace: default
+  labels:
+    {{- include "webapp-color.labels" . }}
 kind: ConfigMap
 data:
   FONT_COLOR: yellow
