--- a/webapp-color/templates/deployment.yaml
+++ b/webapp-color/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: {{ .Values.name }}
+    {{- include "webapp-color.labels" . }}
   name: {{ .Values.name }}-deploy
 spec:
   replicas: {{ .Values.deployment.replicaCount }}
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}
+        {{- include "webapp-color.labels" . | nindent 4 }}
     spec:
       containers:
       - image: {{ .Values.deployment.image.repository }}:{{ .Values.deployment.image.tag | default "latest" }}
