--- a/webapp-color/templates/service.yaml
+++ b/webapp-color/templates/service.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.name }}-svc
-  namespace: default
+  labels:
+    {{- include "webapp-color.labels" . }}
 spec:
   ports:
   - port: {{ .Values.service.port }}
